--- a/src/App.css
+++ b/src/App.css
@@ -120,11 +120,22 @@ h1, h2, h3, h4, p {
 /* MAIN PAGE */
 .userSlot{
   width: 80px;
-  height: 80px;
+  height: 100px;
   border: 2px solid red;
   margin-top: 30px;
   margin-left: 30px;
+  padding: 4px;
   background-color: rgb(141, 173, 137);
+  font-size: 12px;
+}
+.userSlot:hover{
+  transform: scale(1.05);
+}
+.userSlot button{
+  padding: 5px 10px;
+  font-size: 12px;
+  font-family: 'Courier New', Courier, monospace;
+  margin: 5px;
 }
 /* TRADER PAGE */
 .itemCard{
