--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ h1, h2, h3, h4, p {
 /* MAIN PAGE */
 .userSlot{
   width: 80px;
-  height: 100px;
+  min-height: 100px;
   border: 2px solid red;
   margin-top: 30px;
   margin-left: 30px;
