--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,7 @@ h1, h2, h3, h4, p {
   margin-left: 5px;
   padding: 6px;
   background-color: rgb(141, 173, 137);
+  font-size: 10px;
 }
 .arenaSlotWeapon{
   max-height: 65px;
@@ -203,11 +204,22 @@ h1, h2, h3, h4, p {
   border: 1px solid brown;
   margin: 5px;
 }
+.innersliderHP{
+  height: 100%;
+  /* width: 100%; */
+  background-color:red;
+}
+.innersliderEnergy{
+  height: 100%;
+  /* width: 100%; */
+  background-color:rgb(100, 54, 228);
+}
 .advancersContainer{
   max-height: 80px;
 }
 .slider2{
   min-width: 360px;
+  max-width: 360px;
   height: 12px;
   border: 1px solid brown;
   margin: 5px;
