--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,7 @@ h1, h2, h3, h4, p {
   padding: 4px;
   background-color: rgb(141, 173, 137);
   font-size: 12px;
+  box-shadow: 0px 9px 23px 3px rgba(126, 22, 22, 0.75);
 }
 .userSlot:hover{
   transform: scale(1.05);
@@ -176,6 +177,7 @@ h1, h2, h3, h4, p {
   padding: 6px;
   background-color: rgb(141, 173, 137);
   font-size: 10px;
+  
 }
 .arenaSlotWeapon{
   max-height: 65px;
